@@ -16,6 +16,7 @@
 package ch.dvbern.ebegu.rest.test;
 
 import java.time.LocalDate;
+import java.util.HashSet;
 import java.util.Set;
 
 import javax.inject.Inject;
@@ -33,8 +34,8 @@ import ch.dvbern.ebegu.api.resource.BetreuungResource;
 import ch.dvbern.ebegu.api.resource.FachstelleResource;
 import ch.dvbern.ebegu.api.resource.FallResource;
 import ch.dvbern.ebegu.api.resource.GesuchResource;
-import ch.dvbern.ebegu.api.resource.GesuchsperiodeResource;
 import ch.dvbern.ebegu.api.resource.KindResource;
+import ch.dvbern.ebegu.entities.BelegungFerieninsel;
 import ch.dvbern.ebegu.entities.Benutzer;
 import ch.dvbern.ebegu.entities.Betreuung;
 import ch.dvbern.ebegu.entities.Gesuch;
@@ -42,6 +43,9 @@ import ch.dvbern.ebegu.entities.InstitutionStammdaten;
 import ch.dvbern.ebegu.entities.KindContainer;
 import ch.dvbern.ebegu.entities.Mandant;
 import ch.dvbern.ebegu.entities.PensumFachstelle;
+import ch.dvbern.ebegu.enums.BetreuungsangebotTyp;
+import ch.dvbern.ebegu.enums.Betreuungsstatus;
+import ch.dvbern.ebegu.enums.Ferienname;
 import ch.dvbern.ebegu.errors.EbeguException;
 import ch.dvbern.ebegu.rest.test.util.TestJaxDataUtil;
 import ch.dvbern.ebegu.services.BenutzerService;
@@ -62,7 +66,7 @@ import org.junit.runner.RunWith;
  * Testet BetreuungResource
  */
 @RunWith(Arquillian.class)
-@UsingDataSet("datasets/empty.xml")
+@UsingDataSet("datasets/mandant-dataset.xml")
 @Transactional(TransactionMode.DISABLED)
 //@ServerSetup(InstallPicketLinkFileBasedSetupTask.class)
 public class BetreuungResourceTest extends AbstractEbeguRestLoginTest {
@@ -77,8 +81,6 @@ public class BetreuungResourceTest extends AbstractEbeguRestLoginTest {
 	private KindResource kindResource;
 	@Inject
 	private GesuchResource gesuchResource;
-	@Inject
-	private GesuchsperiodeResource gesuchsperiodeResource;
 	@Inject
 	private FallResource fallResource;
 	@Inject
@@ -100,7 +102,7 @@ public class BetreuungResourceTest extends AbstractEbeguRestLoginTest {
 		JaxBetreuung testJaxBetreuung = converter.betreuungToJAX(testBetreuung);
 
 		JaxBetreuung jaxBetreuung = betreuungResource.saveBetreuung(converter.toJaxId(returnedKind), testJaxBetreuung, false, RESTEASY_URI_INFO, null);
-		Assert.assertEquals(new Integer(1), jaxBetreuung.getBetreuungNummer());
+		Assert.assertEquals(Integer.valueOf(1), jaxBetreuung.getBetreuungNummer());
 		Assert.assertNotNull(jaxBetreuung);
 	}
 
@@ -127,7 +129,7 @@ public class BetreuungResourceTest extends AbstractEbeguRestLoginTest {
 		JaxBetreuung updatedBetr = betreuungResource.saveBetreuung(converter.toJaxId(initialBetr.getKind()), betreuung, false, RESTEASY_URI_INFO, null);
 		Assert.assertEquals(1, updatedBetr.getBetreuungspensumContainers().size());
 		Assert.assertEquals(Integer.valueOf(1), updatedBetr.getBetreuungNummer());
-		checkNextNumberBetreuung(converter.toJaxId(initialBetr.getKind()), Integer.valueOf(2));
+		checkNextNumberBetreuung(converter.toJaxId(initialBetr.getKind()), 2);
 	}
 
 	/**
@@ -148,16 +150,16 @@ public class BetreuungResourceTest extends AbstractEbeguRestLoginTest {
 
 		Assert.assertNotNull(updatedBetr.getBetreuungspensumContainers());
 		Assert.assertEquals(3, updatedBetr.getBetreuungspensumContainers().size());
-		Assert.assertEquals(new Integer(1), updatedBetr.getBetreuungNummer());
-		checkNextNumberBetreuung(converter.toJaxId(initialBetr.getKind()), Integer.valueOf(2));
+		Assert.assertEquals(Integer.valueOf(1), updatedBetr.getBetreuungNummer());
+		checkNextNumberBetreuung(converter.toJaxId(initialBetr.getKind()), 2);
 
 		updatedBetr.getBetreuungspensumContainers().clear(); //alle bestehenden entfernen
 		updatedBetr.getBetreuungspensumContainers().add(TestJaxDataUtil.createBetreuungspensumContainer(LocalDate.now().plusYears(2).getYear())); //einen neuen einfuegen
 
 		updatedBetr = betreuungResource.saveBetreuung(converter.toJaxId(initialBetr.getKind()), updatedBetr, false, RESTEASY_URI_INFO, null);
 		Assert.assertEquals(1, updatedBetr.getBetreuungspensumContainers().size());
-		Assert.assertEquals(new Integer(1), updatedBetr.getBetreuungNummer());
-		checkNextNumberBetreuung(converter.toJaxId(initialBetr.getKind()), Integer.valueOf(2));
+		Assert.assertEquals(Integer.valueOf(1), updatedBetr.getBetreuungNummer());
+		checkNextNumberBetreuung(converter.toJaxId(initialBetr.getKind()), 2);
 
 	}
 
@@ -193,7 +195,7 @@ public class BetreuungResourceTest extends AbstractEbeguRestLoginTest {
 		persistStammdaten(testBetreuung.getInstitutionStammdaten());
 		testBetreuung.setKind(returnedKind);
 		Betreuung betreuung = betreuungService.saveBetreuung(testBetreuung, false);
-		checkNextNumberBetreuung(converter.toJaxId(betreuung.getKind()), Integer.valueOf(2));
+		checkNextNumberBetreuung(converter.toJaxId(betreuung.getKind()), 2);
 		return betreuung;
 	}
 
@@ -201,4 +203,117 @@ public class BetreuungResourceTest extends AbstractEbeguRestLoginTest {
 		final JaxKindContainer updatedKind = kindResource.findKind(kindId);
 		Assert.assertEquals(number, updatedKind.getNextNumberBetreuung());
 	}
+
+	@Test
+	public void testNewBetreuungIsDuplicate() throws EbeguException {
+
+		Betreuung existingBetreuung1 = TestDataUtil.createDefaultBetreuung();
+		Betreuung existingBetreuung2 = TestDataUtil.createDefaultBetreuung();
+		Betreuung newBetreuung = TestDataUtil.createDefaultBetreuung();
+
+		newBetreuung.setInstitutionStammdaten(existingBetreuung1.getInstitutionStammdaten());
+		Set<Betreuung> betreuungen = new HashSet<>();
+		betreuungen.add(existingBetreuung1);
+		betreuungen.add(existingBetreuung2);
+
+		JaxBetreuung jaxNewBetreuung= converter.betreuungToJAX(newBetreuung);
+
+		Assert.assertTrue(betreuungResource.hasDuplicate(jaxNewBetreuung, betreuungen));
+
+	}
+
+
+	@Test
+	public void testNewBetreuungIsNotDuplicate() throws EbeguException {
+
+		Betreuung existingBetreuung1 = TestDataUtil.createDefaultBetreuung();
+		Betreuung existingBetreuung2 = TestDataUtil.createDefaultBetreuung();
+		Betreuung newBetreuung = TestDataUtil.createDefaultBetreuung();
+
+		Set<Betreuung> betreuungen = new HashSet<>();
+		betreuungen.add(existingBetreuung1);
+		betreuungen.add(existingBetreuung2);
+
+		JaxBetreuung jaxNewBetreuung= converter.betreuungToJAX(newBetreuung);
+
+		Assert.assertFalse(betreuungResource.hasDuplicate(jaxNewBetreuung, betreuungen));
+
+	}
+
+	@Test
+	public void testNewBetreuungIsDuplicateFerieninsel() throws EbeguException {
+
+		Betreuung existingBetreuung1 = TestDataUtil.createDefaultBetreuung();
+		Betreuung existingBetreuung2 = TestDataUtil.createDefaultBetreuung();
+		Betreuung newBetreuung = TestDataUtil.createDefaultBetreuung();
+		final InstitutionStammdaten institutionStammdatenFI = existingBetreuung1.getInstitutionStammdaten();
+		institutionStammdatenFI.setBetreuungsangebotTyp(BetreuungsangebotTyp.FERIENINSEL);
+		BelegungFerieninsel belegungFerieninsel = new BelegungFerieninsel();
+		belegungFerieninsel.setFerienname(Ferienname.FRUEHLINGSFERIEN);
+		existingBetreuung1.setBelegungFerieninsel(belegungFerieninsel);
+
+		newBetreuung.setInstitutionStammdaten(existingBetreuung1.getInstitutionStammdaten());
+		newBetreuung.setBelegungFerieninsel(belegungFerieninsel);
+		Set<Betreuung> betreuungen = new HashSet<>();
+		betreuungen.add(existingBetreuung1);
+		betreuungen.add(existingBetreuung2);
+
+		JaxBetreuung jaxNewBetreuung= converter.betreuungToJAX(newBetreuung);
+
+		Assert.assertTrue(betreuungResource.hasDuplicate(jaxNewBetreuung, betreuungen));
+
+	}
+
+	@Test
+	public void testNewBetreuungIsNotDuplicateFerieninsel() throws EbeguException {
+
+		Betreuung existingBetreuung1 = TestDataUtil.createDefaultBetreuung();
+		Betreuung existingBetreuung2 = TestDataUtil.createDefaultBetreuung();
+		Betreuung newBetreuung = TestDataUtil.createDefaultBetreuung();
+		final InstitutionStammdaten institutionStammdatenFI = existingBetreuung1.getInstitutionStammdaten();
+		institutionStammdatenFI.setBetreuungsangebotTyp(BetreuungsangebotTyp.FERIENINSEL);
+		BelegungFerieninsel belegungFerieninsel = new BelegungFerieninsel();
+		belegungFerieninsel.setFerienname(Ferienname.FRUEHLINGSFERIEN);
+		existingBetreuung1.setBelegungFerieninsel(belegungFerieninsel);
+
+		newBetreuung.setInstitutionStammdaten(existingBetreuung1.getInstitutionStammdaten());
+		newBetreuung.setBelegungFerieninsel(belegungFerieninsel);
+		Set<Betreuung> betreuungen = new HashSet<>();
+		betreuungen.add(existingBetreuung1);
+		betreuungen.add(existingBetreuung2);
+
+		JaxBetreuung jaxNewBetreuung= converter.betreuungToJAX(newBetreuung);
+		jaxNewBetreuung.getBelegungFerieninsel().setFerienname(Ferienname.SOMMERFERIEN);
+
+
+		Assert.assertFalse(betreuungResource.hasDuplicate(jaxNewBetreuung, betreuungen));
+
+	}
+
+	@Test
+	public void testNewBetreuungIsDuplicateFerieninselButStorniert() throws EbeguException {
+
+		Betreuung existingBetreuung1 = TestDataUtil.createDefaultBetreuung();
+		Betreuung existingBetreuung2 = TestDataUtil.createDefaultBetreuung();
+		Betreuung newBetreuung = TestDataUtil.createDefaultBetreuung();
+		final InstitutionStammdaten institutionStammdatenFI = existingBetreuung1.getInstitutionStammdaten();
+		institutionStammdatenFI.setBetreuungsangebotTyp(BetreuungsangebotTyp.FERIENINSEL);
+		BelegungFerieninsel belegungFerieninsel = new BelegungFerieninsel();
+		belegungFerieninsel.setFerienname(Ferienname.FRUEHLINGSFERIEN);
+		existingBetreuung1.setBelegungFerieninsel(belegungFerieninsel);
+
+		newBetreuung.setInstitutionStammdaten(existingBetreuung1.getInstitutionStammdaten());
+		newBetreuung.setBelegungFerieninsel(belegungFerieninsel);
+		Set<Betreuung> betreuungen = new HashSet<>();
+		betreuungen.add(existingBetreuung1);
+		betreuungen.add(existingBetreuung2);
+
+		JaxBetreuung jaxNewBetreuung= converter.betreuungToJAX(newBetreuung);
+		existingBetreuung1.setBetreuungsstatus(Betreuungsstatus.STORNIERT);
+
+		Assert.assertFalse(betreuungResource.hasDuplicate(jaxNewBetreuung, betreuungen));
+
+	}
+
+
 }
